Incorrect error code returned from command_delete_stream
Summary
When the function command_delete_stream is invoked via the native protocol and the stream being deleted does not exist, the function returns PA_ERR_EXIST, which seems to be the incorrect error code in this case. PA_ERR_NOENTITY seems more appropriate code to return in this case.
environment
See attached pa-info.txt
Steps to reproduce
Try to delete a stream that does not exist via the native API.
What is the current bug behavior?
Incorrect error code returned from command_delete_stream function when the stream being deleted does not exist.
What is the expected correct behavior?
I would have expected that the function command_delete_stream would return PA_ERR_NOENTITY when the stream being deleted does not exist.