protocol-native: Fix error code

Fixes: https://gitlab.freedesktop.org/pulseaudio/pulseaudio/issues/816